final_project/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fibonacci-app
  template:
    metadata:
      labels:
        app: fibonacci-app
    spec:
      containers:
      - name: fibonacci-app
        image: svterskov/fibonacci-app:latest
        ports:
        - containerPort: 80
