final_project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-service
spec:
  type: ClusterIP
  selector:
    app: fibonacci-app
  ports:
    - port: 80
      targetPort: 80
